--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-native": "0.72.3",
     "react-native-maps": "1.7.1",
     "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0"
+    "react-native-screens": "~3.22.0",
+    "expo-linear-gradient": "~12.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
